# tempfdw

./: pyproject.toml
dxfdw/dxfdw/: cachingogcfdw.py  requestsfdw.py
